# PoliceStopAndSearch

./: .gitignore  README.md  alembic.ini  dagger.json  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  post_create_command.sh
alembic/: env.py
alembic/versions/: 2025-09-07T08:08:07_create_bronze_tables.py
dagger/: pyproject.toml
dagger/src/police_api_ingester/: __init__.py  main.py
postgres/: restore.sh
requirements/: dev.txt  development.txt  production.txt
src/alembic/: env.py
src/alembic/versions/: 2025-09-06T21:31:28_create_bronze_tables.py  2025-09-07T08:08:07_create_bronze_tables.py
src/ingest/: available_date_repository.py  factories.py  force_repository.py  ingest.py  police_client.py
src/ingest/repositories/: available_date_repository.py  force_repository.py  stop_and_search_repository.py
src/models/bronze/: __init__.py  available_date.py  available_date_force_mapping.py  force.py  stop_and_search.py
src/police_api_ingester/: __main__.py  factories.py  ingest.py  main.py  police_client.py
src/police_api_ingester/commands/: __init__.py  ingest.py  options.py  parsers.py  schedule.py
src/police_api_ingester/models/: __init__.py  cron.py
src/police_api_ingester/repositories/: __init__.py  available_date_repository.py  force_repository.py  repository.py  stop_and_search_repository.py
src/police_stop_and_search/: __init__.py  main.py
tests/test_integration/: conftest.py
tests/test_integration/test_bronze/: test_store_data.py
tests/test_integration/test_data/: available_dates.json  forces.json  (+2 more)
(+15 files in other folders)
