[project]
name = "police-stop-and-search"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["dagger-io"]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

lint.select = ["F", "E", "W", "I", "B", "UP"]

lint.ignore = ["E203"]

lint.preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false