[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "police_api_ingester"
version = "0.1.0"
description = "Ingests data into a SQL database from a police API"
authors = [
  { name = "Jason Moore", email = "you@example.com" }
]
requires-python = ">=3.9"
dependencies = [
  "sqlmodel==0.0.24",
  "psycopg2-binary==2.9.10",
  "httpx==0.28.1",
  "aiolimiter==1.2.1",
  "typer==0.17.4"
]

[project.optional-dependencies]
dev = [
  "dagger-io==0.18.17",
  "alembic==1.16.5",
  "pytest==8.4.2",
  "pytest-asyncio==1.1.0"
]

[project.scripts]
police-api-ingester = "police_api_ingester.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]

